-----------------------------------------------------------------------------------------
	$Id$
-----------------------------------------------------------------------------------------

2014-05-26	pwessel
	* gmt_plot.c, pslib.?, pstext.c, psclip.c:	New handling of PSL clipping for quoted text
				lines (contours) and text.  No more different clip off types
				in psclip.

2014-05-20	remko
	* *.[ch]:		Renamed TIME_LANGUAGE to GMT_LANGUAGE. Introduced language-
				dependent names and abbreviations of cardinal points.

2014-05-08	remko
	* gmt_plot.c:		Fix bug in treatment of variable text introduced on 2014-05-04.
				This addresses issue #554.

2014-05-07	pwessel, remko
	* gmt_support.c:	Added support for both variables and constants on both sides
				of the operator in the conditional tests used for custom symbols;
				see issue # 554.
	* gmt_plot.c:		---"---
	* gmt_symbol.h:		___"___

2014-05-04	pwessel
	* gmt_plot.c:		Fix treatment of text and font attributes in custom symbols
	* gmt_support.c:	---"---.  This addresses issue # 553.

2014-04-24	pwessel
	* grdcut.c:		Needed to extend -Z to also consider -Zr so that -Zn
				would return a NaN-free subset.

2014-04-05	pwessel
	* xyz2grd.c:		Replaced -N<nodata> with common option -di<nodata>, but
				left -N for backwards compatibility under 4.
	* grd2xyz.c:		Replaced -N[i]<nodata> with common option -d[i]<nodata>, but
				left -N for backwards compatibility under 4.

2014-04-04	pwessel
	* psbasemap.c:		Added new option -A[file] which instead of plotting a map
				will write the coordinates of the plot domain outline to
				the given file (or stdout).

2014-04-03	pwessel
	* gmt_init.c:		Added new common GMT option -d[i|o]<nodata>, which can be
				used anywhere to convert users <nodata> values to NaN, and to do
				the reverse on output.

2014-04-02	pwessel
	* spotter/backtracker.c:	Merge -e with -E to simplify operations and to
				disallow lower-case options other than for GMT common options.